// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`excludeUrlsPatterns should exclude initial page tracking 1`] = `
Array [
  Array [
    "enableLinkTracking",
  ],
  Array [
    "setTrackerUrl",
    "https://YO/matomo.php",
  ],
  Array [
    "setSiteId",
    "42",
  ],
]
`;

exports[`excludeUrlsPatterns should excluded login.php and token variables 1`] = `
Array [
  Array [
    "trackPageView",
  ],
  Array [
    "enableLinkTracking",
  ],
  Array [
    "setTrackerUrl",
    "https://YO/matomo.php",
  ],
  Array [
    "setSiteId",
    "42",
  ],
  Array [
    "setReferrerUrl",
    "/",
  ],
  Array [
    "setCustomUrl",
    "/path/to/page.php",
  ],
  Array [
    "deleteCustomVariables",
    "page",
  ],
  Array [
    "setDocumentTitle",
    "some page",
  ],
  Array [
    "trackPageView",
  ],
]
`;

exports[`excludeUrlsPatterns should track initial page if not excluded 1`] = `
Array [
  Array [
    "trackPageView",
  ],
  Array [
    "enableLinkTracking",
  ],
  Array [
    "setTrackerUrl",
    "https://YO/matomo.php",
  ],
  Array [
    "setSiteId",
    "42",
  ],
]
`;

exports[`init should NOT create events when url is not provided 1`] = `Array []`;

exports[`init should create a js tag and initialize 1`] = `
Array [
  Array [
    "trackPageView",
  ],
  Array [
    "enableLinkTracking",
  ],
  Array [
    "setTrackerUrl",
    "https://YO/matomo.php",
  ],
  Array [
    "setSiteId",
    "42",
  ],
]
`;

exports[`push should append data to window._paq 1`] = `
Array [
  Array [
    "trackEvent",
    "kikoo",
    "lol",
  ],
]
`;

exports[`router.routeChangeComplete event should track route as search in /recherche 1`] = `
Array [
  Array [
    "setDocumentTitle",
    "search results",
  ],
  Array [
    "trackSiteSearch",
    "some+query",
  ],
]
`;

exports[`router.routeChangeComplete event should track route as search in /search 1`] = `
Array [
  Array [
    "setDocumentTitle",
    "search results",
  ],
  Array [
    "trackSiteSearch",
    "some+query",
  ],
]
`;

exports[`router.routeChangeComplete event should trackPageView with correct title on route change 1`] = `
Array [
  Array [
    "setDocumentTitle",
    "test page",
  ],
  Array [
    "trackPageView",
  ],
]
`;

exports[`router.routeChangeComplete event should use previousPath as referer on consecutive route change 1`] = `
Array [
  Array [
    "setDocumentTitle",
    "test page 2",
  ],
  Array [
    "trackPageView",
  ],
]
`;
